test/1.4/errors/T_EAINCOMP.dml
/*
  © 2022 Intel Corporation
  SPDX-License-Identifier: MPL-2.0
*/
dml 1.4;
device test;

/// ERROR EAINCOMP
group g[i < ...];
/// ERROR EAINCOMP
group g[j < 4];

// No error
group h[i < ...];
group h[_ < 4];
